hw 5 compiler fix